fixed responsiveness on small screens

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 #container {
-	width: 900px;	
+	max-width: 900px;	
 	padding: 40px 40px 20px 40px;
 	font-size: 16px;
 	color: #ddd;
@@ -24,7 +24,7 @@ img {
 
 body {
 	margin: auto;
-	width: 1024px;
+	max-width: 1024px;
 	font-family: sans-serif;
 	background-color: #111;
 }
@@ -54,7 +54,7 @@ a:hover {
 	margin-bottom: 25px;
 	text-align: center;
 	margin-right: 2em;
-	width: 900px;
+	max-width: 900px;
 }
 
 #stickers img {
